--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Lancashire (England) -- Description and travel'
 - !lcc 'DA'
+- GITenberg
 title: 'Lancashire: Brief Historical and Descriptive Notes'
 url: http://www.gutenberg.org/ebooks/40584
